# gui-crew

./: .gitignore  README.md  app.py  builder.py  canvas.py  crew_engine.py  crewai_code_generator.py  crewai_python_parser.py  models.py  observability.py  operations.py  pricing.yaml  pyproject.toml  styles.py
.atl/: .skill-registry.cache.json  skill-registry.md
openspec/: config.yaml
openspec/changes/crewai-import-export-templates/: tasks.md
openspec/changes/gui-crew/: design.md  explore.md  proposal.md  tasks.md
openspec/changes/observability/: design.md  exploration.md  proposal.md  tasks.md
openspec/changes/observability/specs/crew-observability/: spec.md
openspec/changes/playground/: tasks.md
openspec/specs/canvas-editor/: spec.md
openspec/specs/crew-builder/: spec.md
openspec/specs/crew-engine/: spec.md
openspec/specs/crew-observability/: spec.md
openspec/specs/operations-toolkit/: spec.md
tests/: test_app.py  test_builder.py  test_canvas.py  test_crew_engine.py  test_crew_engine_integration.py  test_models.py  test_observability.py  test_operations.py  test_playground.py  test_styles.py
